<resources>
    <string name="app_name">Lease Or Rent Home Inc.</string>
    <string name="lease_or_rent_home_inc_logo_content_description">Lease Or Rent Home Inc. Logo</string>
    <string name="apartment_title_text">Apartment Selection</string>
    <string name="condo_apartment_title_text">Condominium Apartment Selection</string>
    <string name="detached_home_title_text">Detached Home Selection</string>
    <string name="semi_detached_home_title_text">Semi-Detached Home Selection</string>
    <string name="townhouse_title_text">Townhouse Selection</string>
    <string name="final_order_info_title_text">Order Complete!</string>
    <string name="checkout_screen_title_text">Checkout</string>
    <string name="payment_screen_title_text">Payment</string>
    <string name="enter_btn_text">Enter</string>
    <string name="return_to_main_screen_btn_text">Main Screen</string>
    <string name="second_screen_prompt_text">Please select a home type from the options menu above to get started.</string>
    <string name="checkout_btn_text">Checkout</string>
    <string name="payment_btn_text">Payment</string>
    <string name="apartment_menu_item_text">Apartment</string>
    <string name="detached_home_menu_item_text">Detached Home</string>
    <string name="semi_detached_home_menu_item_text">Semi-Detached Home</string>
    <string name="condo_menu_item_text">Condominium Apartment</string>
    <string name="townhouse_menu_item_text">Townhouse</string>
    <string name="house_image_placeholder">House and or Apartment Image</string>
    <string name="payment_enter_name_entry">Enter your full name</string>
    <string name="payment_credit_radio_option_prompt_text">Credit</string>
    <string name="payment_debit_radio_option_prompt_text">Debit</string>
    <string name="payment_credit_debit_number_entry">Enter your credit or credit card number</string>
    <string name="payment_optional_prompt_text">Optional: Please let us know more about you!</string>
    <string name="payment_optional_fav_sport_entry">Enter your favourite sport</string>
    <string name="payment_optional_fav_sport_team_entry">Enter your favourite sports team</string>
    <string name="payment_optional_fav_food_entry">Enter your favourite food</string>
    <string name="payment_pay_btn_text">Pay</string>
</resources>